k8s-manifests/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: namespace
